# datamodel_calibration

./: .gitignore  404.html  CITATION.cff  Readme.md  TestStandardCurve.ipynb  Untitled.ipynb  abts_standard.json  calibration_curve.json  index.html  linear_test.json  mkdocs.yml  pyproject.toml  rational_test.xml  requirements.txt  setup.py  sitemap.xml  test.ipynb  test.py  test_calibrator.ipynb  test_sdrdm_workflow.ipynb  testdata.ipynb  usage.ipynb
.github/workflows/: generate_api.yaml  make_docs.yaml  tests.yaml
CaliPytion/: __init__.py
CaliPytion/core/: __init__.py  analyte.py  calibration.py  calibrationmodel.py  calibrationrange.py  calibrator.py  concentrationunit.py  concentrationunits.py  device.py  fitstatistics.py  model.py  parameter.py  result.py  sample.py  series.py  signaltype.py  spectrum.py  standard.py  temperatureunit.py  variable.py
CaliPytion/ioutils/: __init__.py  animlio.py  parsemodel.py
CaliPytion/modified/: __init__.py  calibrationmodel.py  calibrator.py  model.py  parameter.py  spectrum.py  standard.py
CaliPytion/schemes/: CaliPytion.md  CaliPytion_metadata.json  calipytion_schema.md
CaliPytion/tools/: __init__.py  calibrationmodel.py  calibrator.py  equations.py  models.toml  models.yaml  standardcurve.py
CaliPytion2/core/: __init__.py  calibrationmodel.py  fitstatistics.py  sample.py  standard.py
CaliPytion2/schemes/: calipytion2_schema.md
CaliPytion2/tools/: calibrator.py  equations.py
CaliPytion_old/core/: __init__.py  calibrationmodel.py  calibrator.py  fitstatistics.py  model.py  spectrum.py  standard.py
CaliPytion_old/tools/: __init__.py
Calibration/: __init__.py
Calibration/core/: __init__.py  calibration.py  concentrationunits.py  data.py  device.py  series.py  spectrum.py  standard.py
Calibration/schemes/: Calibration data-model.md  (+1 more)
calipytion/: __init__.py  model.py
data/: cal_data.xlsx  enzymeml.json
data_model/: index.html
datamodel_calibration/: __init__.py
docs/: data_model.md  index.md  model.md  usage.ipynb  usage.md
docs/data/: data.animl  (+3 more)
docs_old/: examples.md  getting_started.md
examples/: test_calibrator.ipynb  test_script.py
pyDataset/: __init__.py
specifications/: CalibrationModel.md  calibration_data_model.md  calibration_standard_model.md  calipytion.md  data_model.md  new_calibration.md
tests/: test_calibrator.py  test_core_calibrationmodel.py  test_fitter.py  test_map_enzymeme.py
usage/: index.html
(+87 files in other folders)
