[tool.poetry]
name = "calipytion"
version = "0.2.1"
description = "Tool for managing and analyzing data from calibration measurements for concentration calculation."
authors = ["haeussma <83341109+haeussma@users.noreply.github.com>"]
license = "MIT License"
readme = "Readme.md"
packages = [{include = "calipytion"}]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.18.0"
numpy = "^1.26.4"
lmfit = "^1.2.2"
sympy = "^1.12"
matplotlib = "^3.8.2"
nbformat = "^5.10.4"
pydantic = "^2.4"
rich = "^13"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.8"
pytest = "^8.0.0"
mkdocs-jupyter = "^0.24.7"
devtools = "^0.12.2"
notebook = "^6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
